src/scss/layouts/_me.scss
.me {
    .about {
        color: darken($grey-pale, 10%);
        font-size: 6vw;
        margin-bottom: 7vh;
        position: relative;
        z-index: 10;

        p {
            margin-bottom: 1em;
        }
    }
    aside {
        margin-bottom: 15vh;
        margin-right: -6vw;
        margin-top: 5vh;
    }
    figure {
        height: 80vh;
        margin-bottom: -10vh;
        margin-left: -5vw;
        position: relative;

        img {
            display: block;
            height: 100%;
            width: auto;
        }

        figcaption {
            color: rgba($black, 0.3);
            left: 5vw;
            opacity: 0.5;
            position: absolute;
            top: -5vh;
            transition: $transition-default;

            &:hover {
                opacity: 1;
            }
        }
    }
    footer {
        display: none;
    }
}


@media screen and (min-width: $medium-min) {
    .me {
        .brand {
            a {
                opacity: 0.1;

                &:hover,
                &:focus {
                    opacity: 1;
                }
            }
        }
        .about {
            color: $grey-pale;
            float: right;
            font-size: 3vw;
            margin-top: -15vh;
            width: 50vw;
        }

        figure {
            bottom: 0;
            height: 65vh;
            left: 0;
            margin-bottom: 0;
            margin-left: 0;
            position: fixed;

            figcaption {
                bottom: 3vh;
                left: 50vh;
                position: absolute;
                top: auto;
            }
        }
    }
}

@media screen and (min-width: $large-min) {
    .me {
        .about {
            font-size: 3vw;
        }
    }
}

